# jma-gis

./: .gitignore  Makefile  README.md  pyproject.toml
demo/: index.html
tools/: download.py  shape_to_geojson.py  visualize.py
tools/es/: make_shape_index.py  settings.py
visualized/: README.md
